# xyzen-pet

./: .dockerignore  .gitignore  .npmrc  CLAUDE.md  docker-compose.yml  eslint.config.js  index.html  knip.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
apps/stage-tamagotchi/: package.json
apps/stage-tamagotchi/scripts/: funasr-server.py  kokoro-server.py  postinstall.ts
apps/stage-tamagotchi/src/main/: index.ts
apps/stage-tamagotchi/src/main/services/airi/esp32-bridge/: index.ts
apps/stage-tamagotchi/src/main/services/airi/local-ai/: gpu-detection.ts  index.ts  llama-service.ts  model-profiles.ts  ollama-service.ts  python-services.ts  service-manager.ts
apps/stage-tamagotchi/src/main/windows/main/: index.ts
apps/stage-tamagotchi/src/main/windows/main/rpc/: index.electron.ts
apps/stage-tamagotchi/src/main/windows/settings/: index.ts
apps/stage-tamagotchi/src/main/windows/settings/rpc/: index.electron.ts
apps/stage-tamagotchi/src/renderer/modules/: i18n.ts
apps/stage-tamagotchi/src/renderer/pages/: index.vue
apps/stage-tamagotchi/src/shared/: eventa.ts
apps/stage-web/src/modules/: i18n.ts
docker/: README.md  builder.Dockerfile  entrypoint-runtime.sh  runtime.Dockerfile
docker/libonnxruntime/: .gitignore  fetch.sh
docs/: buddy-get.md  buddy-setting.md  world-setting.md
nix/: pnpm-deps-hash.txt
public/: voice-playback-worklet.js
public/vad/: vad.worklet.bundle.min.js
services/esp32-bridge/: .env  package.json  tsconfig.json
services/esp32-bridge/src/: bridge.ts  index.ts  protocol.ts
services/local-ai-llama/: Modelfile.qwen3-4b-no-think  models.json  package.json  setup.ts
services/local-ai-python/: package.json  requirements.txt  setup.ts
services/local-ai-python/servers/: cosyvoice-server.py  funasr-server.py  test-funasr-server.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  buddy_stub.rs  error.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: client.rs  mod.rs  session.rs  settings.rs
src-tauri/src/buddy/: cache.rs  client.rs  commands.rs  mod.rs  types.rs
src-tauri/src/ipc/: auth_cmd.rs  http_cmd.rs  mod.rs  sse_cmd.rs  vad_cmd.rs  voice_cmd.rs
src-tauri/src/net/: http.rs  mod.rs  sse.rs  voice_ws.rs
src-tauri/src/session_stream/: client.rs  mod.rs  session.rs  types.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/vad/: mod.rs  silero.rs  worker.rs
src-tauri/src/voice/: fsm.rs  mod.rs  session.rs
src-tauri/tests/: auth_client.rs  auth_status.rs  buddy.rs  buddy_stub.rs  ipc_surface.rs  session_stream.rs  settings.rs  silero.rs  vad_decode.rs  vad_fsm.rs  vad_signal.rs  voice.rs
src/audio/: pcm16-capture-worklet.js  pcm16-capture-worklet.ts
src/components/: BuddyDetailsDialog.vue  BuddyStatusOverlay.vue  GeneralModule.vue  ModuleStatusHeader.vue  OnboardingRitual.vue  SettingsDialog.vue  SettingsPreviewPopover.vue  SettingsStandalone.vue  VisionModule.vue
src/components/SettingsPanel/: BuddiesPanel.vue  BuddyDetailsDialog.vue  ConnectionPanel.vue  GeneralPanel.vue  VisionPanel.vue  VoicePanel.vue
src/components/SettingsPanel/Buddies/: BuddiesPanel.vue  BuddyDetailsDialog.vue
src/components/modules/: GeneralModule.vue  ModuleStatusHeader.vue  VisionModule.vue
src/composables/: useBuddySession.ts  useBuddyVoiceSession.ts  useVad.ts  useVoiceMic.ts  useXyzenBridge.ts
src/ipc/: bindings.ts  client.ts  keys.ts
src/locales/: index.ts
src/locales/en/: buddy.json
src/locales/zh-CN/: buddy.json
src/runtime/: config.ts
src/runtime/providers/: devicePairing.ts  tauriSibling.ts  types.ts
src/services/: audio-decoder.ts  ceo-chat.ts  event-bus.ts  http.ts  index.ts  sse.ts  voice-ws.ts
src/services/xyzen/: buddies.ts  sse.ts  types.ts  voice-ws.ts
src/stores/: audio-device.ts  audio.ts  buddy-state.ts  buddy.ts  ceo-chat.ts  display-models.ts  general.ts  hearing.ts  settings.ts
src/stores/constants/: emotions.ts  trait-prompts.ts
src/three/assets/vrm/: index.ts
src/three/assets/vrm/animations/: index.ts
src/three/assets/vrm/models/: README.md  registry.ts
src/three/assets/vrm/models/Jiuwei/: animation-driver.ts
src/three/assets/vrm/models/buddy_egg/: animation-driver.ts
src/three/assets/vrm/models/jiuwei_infant/: animation-driver.ts
src/three/assets/vrm/models/lihuan_infant/: animation-driver.ts
src/three/components/: ThreeScene.vue
src/three/components/Controls/: index.ts
src/three/components/Model/: VRMModel.vue  index.ts  vrm-instance-cache.ts
src/three/composables/: render-target.ts
src/three/composables/shader/: ibl.ts
src/three/composables/vrm/: animation-driver.ts  animation.ts  core.ts  expression.ts  gesture-driver.ts  hooks.ts  internal-hooks.ts  lip-sync.ts  loader.ts  outline.ts
src/three/composables/vrm/utils/: eye-motions.ts
src/three/stores/: model-store.ts
src/utils/: nicknames.ts  wake-word.ts
