[package]
name = "buddy"
version = "0.1.0"
description = "Xyzen Buddy desktop overlay"
edition = "2021"
rust-version = "1.77"

[lib]
name = "buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
