[package]
name = "buddy"
version = "0.1.0"
description = "Xyzen Buddy desktop overlay"
edition = "2021"
rust-version = "1.77"

[lib]
name = "buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Desktop dev default: `ort` downloads a matching onnxruntime binary. Pi
# builds pass `--no-default-features --features ort-dynamic` and ship
# libonnxruntime.so themselves (glibc skew vs Debian).
default = ["ort-download"]
ort-download = ["ort/download-binaries"]
ort-dynamic = ["ort/load-dynamic"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking + async runtime (stages 2–5). Added in stage 1 so every module
# compiles against the same toolchain pinning; unused-lint is allowed until
# the ports land.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
url = "2"

# Error + logging.
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc. `chrono` gives us local-day boundary for the SSE `since` parameter;
# `urlencoding` encodes that ISO string for the query; `rand` seeds the SSE
# reconnect jitter.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
urlencoding = "2"
rand = "0.8"

# VAD. `ort` 2.x is API-stable enough for production; pinned to rc to
# guard against API churn. `std` pulls the filesystem load path we need
# for `commit_from_file`.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
