[package]
name = "buddy"
version = "0.1.0"
description = "Xyzen Buddy desktop overlay"
edition = "2021"
rust-version = "1.77"
# `gen-bindings` is a dev-time binary for regenerating src/ipc/bindings.ts;
# the app itself is the default `buddy` binary (built from src/main.rs).
default-run = "buddy"

[lib]
name = "buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Desktop dev default: `ort` downloads a matching onnxruntime binary. Pi
# builds pass `--no-default-features --features ort-dynamic` and ship
# libonnxruntime.so themselves (glibc skew vs Debian).
default = ["ort-download"]
ort-download = ["ort/download-binaries"]
ort-dynamic = ["ort/load-dynamic"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime. Tauri v2 pulls tokio transitively; we surface the pieces
# the VAD worker + voice-session scaffold need directly.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"

# HTTP client for the Xyzen auth flow (device-code grant). `rustls-tls` keeps
# the Pi aarch64 image free of a system-OpenSSL dep.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# VAD. `ort` 2.x is API-stable enough for production; pinned to rc to
# guard against API churn. `std` pulls the filesystem load path needed
# for `commit_from_file`.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std"] }

# IPC type generation. `tauri-specta` emits a TS file containing commands,
# events, and derived types in one pass; `specta` is the underlying reflection
# crate (attach `#[derive(specta::Type)]` to Rust structs to expose them).
specta = { version = "=2.0.0-rc.24", features = ["serde_json"] }
specta-typescript = "=0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }

# `gen_bindings` is a binary target — it runs once per `yarn gen-bindings`
# invocation to regenerate src/ipc/bindings.ts. It's not part of the app.
[[bin]]
name = "gen-bindings"
path = "src/bin/gen_bindings.rs"

[dev-dependencies]
# Async assertion helpers for #[tokio::test] flows.
tokio-test = "0.4"
# Scratch paths for the Silero load error-path test.
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
